syntax = "proto2";

package server;

import "google/protobuf/duration.proto";
import "cloud/disk_manager/internal/pkg/auth/config/config.proto";
import "cloud/disk_manager/internal/pkg/clients/nbs/config/config.proto";
import "cloud/disk_manager/internal/pkg/clients/nfs/config/config.proto";
import "cloud/disk_manager/internal/pkg/clients/snapshot/config/config.proto";
import "cloud/disk_manager/internal/pkg/dataplane/config/config.proto";
import "cloud/disk_manager/internal/pkg/logging/config/config.proto";
import "cloud/disk_manager/internal/pkg/monitoring/config/config.proto";
import "cloud/disk_manager/internal/pkg/performance/config/config.proto";
import "cloud/disk_manager/internal/pkg/persistence/config/config.proto";
import "cloud/disk_manager/internal/pkg/services/disks/config/config.proto";
import "cloud/disk_manager/internal/pkg/services/filesystem/config/config.proto";
import "cloud/disk_manager/internal/pkg/services/images/config/config.proto";
import "cloud/disk_manager/internal/pkg/services/placementgroup/config/config.proto";
import "cloud/disk_manager/internal/pkg/services/pools/config/config.proto";
import "cloud/disk_manager/internal/pkg/services/snapshots/config/config.proto";
import "cloud/disk_manager/internal/pkg/services/transfer/config/config.proto";
import "cloud/disk_manager/internal/pkg/tasks/config/config.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/configs/server/config";

////////////////////////////////////////////////////////////////////////////////

message Cert {
    optional string CertFile = 1;
    optional string PrivateKeyFile = 2;
}

////////////////////////////////////////////////////////////////////////////////

message KeepAliveConfig {
    optional string Time = 1 [default = "10s"];
    optional string Timeout = 2 [default = "1s"];
    optional string MinTime = 3 [default = "1s"];
    optional bool PermitWithoutStream = 4 [default = true];
}

////////////////////////////////////////////////////////////////////////////////

message GrpcConfig {
    optional uint32 Port = 1 [default = 9797];
    repeated Cert Certs = 2;
    optional bool Insecure = 3;
    // Used in tests.
    optional string Hostname = 4;
    required KeepAliveConfig KeepAlive = 5;
}

////////////////////////////////////////////////////////////////////////////////

message ServerConfig {
    optional GrpcConfig GrpcConfig = 1;
    required tasks.TasksConfig TasksConfig = 2;
    optional nbs.ClientConfig NbsConfig = 3;
    optional snapshot.ClientConfig SnapshotConfig = 4;
    optional pools.PoolsConfig PoolsConfig = 5;
    optional transfer.TransferConfig TransferConfig = 6;
    optional images.ImagesConfig ImagesConfig = 7;
    optional snapshots.SnapshotsConfig SnapshotsConfig = 8;
    required logging.LoggingConfig LoggingConfig = 9;
    required monitoring.MonitoringConfig MonitoringConfig = 10;
    required auth.AuthConfig AuthConfig = 11;
    required persistence.PersistenceConfig PersistenceConfig = 12;
    optional disks.DisksConfig DisksConfig = 13;
    optional nfs.ClientConfig NfsConfig = 14;
    optional filesystem.FilesystemConfig FilesystemConfig = 15;
    optional placementgroup.Config PlacementGroupConfig = 16;
    optional dataplane.DataplaneConfig DataplaneConfig = 17;
    optional performance.PerformanceConfig PerformanceConfig = 18;
}
